# CRM

./: .env.example  .gitignore  GUIA-COPY-HUMANA.md  HANDOFF.md  PLANEJAMENTO.md  PLANO-DE-EXECUCAO.md  PROXIMOS-PASSOS.md  README.md  garimpo-mapa-do-projeto.md  package-lock.json  package.json
esteira/: .env.example  .gitignore  README.md  pyproject.toml
esteira/fixtures/: cnpj.json  demo_leads.json  maps_results.json
esteira/src/garimpo_esteira/: __init__.py  ai_stage.py  autopilot.py  cascade.py  config.py  discovery.py  draft_stage.py  geo.py  grid.py  match_rate.py  models.py  normalize.py  pipeline_stream.py  pricing.py  receita_load.py  run.py  score_stage.py  scoring.py  state_machine.py  validation.py
esteira/src/garimpo_esteira/draft/: __init__.py  base.py  fallback.py  gemini.py  mock.py  openai_compat.py  prompt.py
esteira/tests/: test_activity_coverage.py  test_ad_library.py  test_address.py  test_ai_stage.py  test_autopilot.py  test_biz_signals.py  test_cascade.py  test_cnpj_name.py  test_cnpj_source.py  test_discovery.py  test_draft.py  test_extract_llm.py  test_geo.py  test_grid.py  test_instagram_source.py  test_llm_fallback.py  test_match_rate.py  test_normalize.py  test_overpass_source.py  test_pagespeed.py  test_pipeline.py  test_pipeline_stream.py  test_places_details.py  test_pricing.py  test_prompt.py  test_provider_chain.py  test_receita_load.py  test_redraft.py  test_reprocess.py  test_reviews_source.py  test_score_stage.py  test_scoring.py  test_site_signals.py  test_state_machine.py  test_validation.py  test_website_extract.py
(+244 files in other folders)
