[project]
name = "garimpo-esteira"
version = "0.0.0"
description = "Esteira de enriquecimento do Garimpo — cascata Python (Maps -> CNPJ -> IG -> site -> Ad Library)."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "phonenumbers>=8.13", "dnspython>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
